# Billiards_Practice_Project

./: README.md
backend/: Dockerfile  backup.sql  bbb.py  docker-compose.yml  requirements.txt  socketfile.py
backend/A202/: settings.py  urls.py  wsgi.py
backend/accounts/: models.py  urls.py  views.py
backend/balls/: urls.py  views.py
backend/boards/: serializers.py  views.py
backend/devices/: views.py
backend/questions/: serializers.py  views.py
backend/userlogs/: models.py
backend/userlogs/migrations/: 0001_initial.py
embedded/: CMakeLists.txt  README.md
embedded/dobilliard/: main.cpp
embedded/include/: connection.hpp  devices.hpp  dobilliard.hpp
embedded/lib/: CMakeLists.txt  dobilliard.cpp
embedded/test/: beamfin.cpp  findball.cpp  full.cpp  main.c  main.cpp  move.cpp  sockclnt.c  sockserv2.c
